--- a/translate/public/manifest.json
+++ b/translate/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Language Learning PWA",
+  "name": "Translate and learn",
   "short_name": "LangLearn",
   "description": "Translate and practice with flashcards",
   "start_url": "/",
