--- a/translate/public/manifest.json
+++ b/translate/public/manifest.json
@@ -1,21 +1,24 @@
 {
-  "name": "Translate and learn",
+  "name": "Language Learning PWA",
   "short_name": "LangLearn",
   "description": "Translate and practice with flashcards",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
