--- a/translate/public/manifest.json
+++ b/translate/public/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "LangLearn",
   "description": "Translate and practice with flashcards",
   "start_url": "/",
-  "display": "standalone",
+  "display": "fullscreen",
   "background_color": "#000000",
   "theme_color": "#000000",
   "orientation": "portrait",
